<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBukaSegitiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/segitiga_title" />

        <Button
            android:id="@+id/buttonBukaTrapesium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/trapesium_title" />

        <Button
            android:id="@+id/buttonJajarGenjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/jajargenjang_title" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>